[project]
name = "mta-datathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "geopandas>=1.1.1",
    "hvplot>=0.12.1",
    "ipykernel>=6.30.1",
    "ipywidgets-bokeh>=1.6.0",
    "jupyter-bokeh>=4.0.5",
    "lonboard>=0.12.0",
    "matplotlib>=3.10.6",
    "palettable>=3.3.3",
    "pandas>=2.3.2",
    "panel>=1.8.1",
    "polars>=1.33.1",
    "polars-h3>=0.6.1",
    "polars-st>=0.3.0",
    "python-geosupport>=1.1.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "sidecar>=0.7.0",
]
